--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -10,16 +10,16 @@
         <a class="nav-link" id="active" href="/resume#top"><span id="leftBracket"></span> Home <span id="rightBracket"></span><span class="sr-only"></span></a>
       </li>
       <li class="nav-item">
-          <a class="nav-link" href="#about"><span id="leftBracket"></span> About me <span id="rightBracket"></span><span class="sr-only"></span></a>
+          <a class="nav-link" href="/resume#about"><span id="leftBracket"></span> About me <span id="rightBracket"></span><span class="sr-only"></span></a>
       </li>
       <li class="nav-item">
         <a class="nav-link" href="/projects"><span id="leftBracket"></span> Technologies & Projects <span id="rightBracket"></span><span class="sr-only"></span></a>
     </li>
       <li class="nav-item">
-          <a class="nav-link" href="#exp"><span id="leftBracket"></span> Experience <span id="rightBracket"></span><span class="sr-only"></span></a>
+          <a class="nav-link" href="/resume#exp"><span id="leftBracket"></span> Experience <span id="rightBracket"></span><span class="sr-only"></span></a>
       </li>
       <li class="nav-item">
-          <a class="nav-link" href="#training"><span id="leftBracket"></span> Training & Qualifications <span id="rightBracket"></span><span class="sr-only"></span></a>
+          <a class="nav-link" href="/resume#training"><span id="leftBracket"></span> Training & Qualifications <span id="rightBracket"></span><span class="sr-only"></span></a>
       </li>
       <li class="nav-item">
           <a class="nav-link" href="#message"><span id="leftBracket"></span> Send me a message <span id="rightBracket"></span><span class="sr-only"></span></a>
