--- a/views/resume.ejs
+++ b/views/resume.ejs
@@ -12,7 +12,7 @@
             <div class="name text-center">
                 <h1>Gareth Whitley</h1>
                 <p>
-                    Tech savvy / Web developer / IT support
+                    Provider of support in the use of information technology
                 </p>
             </a></span><span class="socials" id="emailMe"><a href="#message"><i class="fas fa-envelope"></i></span></a><span class="socials"id="twitterIcon"><a href="https://www.twitter.com/geeteeuu2"><i class="fab fa-twitter-square"></i></a></span><span class="socials" id="linkedin"><a href="https://linkedin.com/in/gareth-whitley"><i class="fab fa-linkedin"></i></span></a><span class="socials"id="radio"><a href="#"><i class="fas fa-broadcast-tower"data-toggle="modal" data-target="#exampleModal"></i></a></span>
             </div>
@@ -71,8 +71,14 @@
               </div>
             </div>    
         </div>
+        
         <span id="exp"></span>
 
+    </div>
+    <div class="container row"id="cvButton">
+      <div class="col text-center">
+        <a href="/assets/GarethWhitleyCV2020.pdf"target="blank"><button class="btn btn-secondary">Download CV in PDF format</button></a>
+      </div>
     </div>
 <div class="container"id="experience">
     <div class="row">
@@ -85,20 +91,123 @@
         <div class="col sm-12">
           <button class="accordion">Providing IT support</button>
                 <div class="panel">
-                    <p>Kitsch PBR&B fixie yuccie, pour-over seitan snackwave etsy copper mug. Hella helvetica pabst disrupt butcher succulents tote bag salvia chia distillery heirloom crucifix polaroid health goth. Viral activated charcoal street art seitan, tbh health goth quinoa four loko af live-edge unicorn. Before they sold out DIY 3 wolf moon fingerstache, dreamcatcher wayfarers photo booth adaptogen asymmetrical knausgaard hell of. Craft beer occupy keytar, skateboard sartorial master cleanse portland tote bag cred fingerstache artisan copper mug farm-to-table man bun small batch. XOXO mumblecore you probably haven't heard of them neutra knausgaard shoreditch cornhole 3 wolf moon salvia flannel single-origin coffee VHS bushwick.</p>
+                    <p><strong>National Trust</strong>
+                      <ul>
+                        <li>
+                          Trained and supported staff and volunteers in the use of cloud systems including Office 365 and SharePoint Team Sites. 
+                        </li>
+                        <li>
+                          This involved reading documentation and attending basic workshops, creating guidebooks for local team and providing guidance and instruction.
+                        </li>
+                          <li>
+                            Reguarly work with IT Business Partner, third-party contractors (OpenReach etc) and digital project teams as first point of contact and local lead on software and hardware use
+                          </li>
+                          <li>
+                            Act as the first-point-of-contact for all local staff and volunteers with software and hardware problem-solving and best practice via email, over the phone and in-person
+                          </li>
+                          <li>
+                            Provide support to local, regional and national teams as a Cisco WebEx Teams Superuser
+                          </li>
+                        </ul>
+                        <p>
+                          <strong>South Kesteven District Council and Bodelwyddan Castle Trust</strong>
+                          <ul>
+                            <li>
+                              Developed and trained staff in the use of new ticketing, finance, reporting, marketing and website systems.
+  
+                            </li>
+                            <li>
+                              Provided first-point-of-contact support via email, over the phone and in person for all IT-related queries before escalation
+                            </li>
+                            
+
+
+                          </ul>
+                        </p>
+                        
+                        <p>
+                          <strong>Bodelwyddan Castle Trust</strong>
+                          <ul>
+                            <li>Trained staff and volunteers the use of new and existing systems including freelance accountants.
+                            </li>
+                            <li>Maintained office’s Microsoft Server 2003 including setting-up new users and email accounts; backing-up storage.
+                            </li>
+                            </ul>
+                        </p>
+
+                    </p>
                 </div>
           
                 <button class="accordion">Installing hardware</button>
                 <div class="panel">
-                    <p>Kitsch PBR&B fixie yuccie, pour-over seitan snackwave etsy copper mug. Hella helvetica pabst disrupt butcher succulents tote bag salvia chia distillery heirloom crucifix polaroid health goth. Viral activated charcoal street art seitan, tbh health goth quinoa four loko af live-edge unicorn. Before they sold out DIY 3 wolf moon fingerstache, dreamcatcher wayfarers photo booth adaptogen asymmetrical knausgaard hell of. Craft beer occupy keytar, skateboard sartorial master cleanse portland tote bag cred fingerstache artisan copper mug farm-to-table man bun small batch. XOXO mumblecore you probably haven't heard of them neutra knausgaard shoreditch cornhole 3 wolf moon salvia flannel single-origin coffee VHS bushwick.</p>
+                  
+                    <p><strong>South Kesteven District Council and Bodelwyddan Castle Trust</strong>
+                      <ul>
+                        <li>Technical contact for third party suppliers for telephony, Internet, network and box office system development.</li>
+                        <li>Installed PDQ, EPOS and receipt printing hardware with softwares</li>
+                      </ul>
+                    </p>
+                   
+                    <p>
+                      <strong>Bodelwyddan Castle Trust</strong>
+                      <ul>
+                        <li>Ordered and supervised professional contractors to install touchscreen and audio visual equipment</li>
+                        <li>Installed basic wired and wireless for new systems including interactive whiteboard, box office, retail and cafe systems.
+                        </li>
+                      </ul>
+                    </p>
                 </div>
                 <button class="accordion">GDPR and information systems</button>
                 <div class="panel">
-                    <p>Kitsch PBR&B fixie yuccie, pour-over seitan snackwave etsy copper mug. Hella helvetica pabst disrupt butcher succulents tote bag salvia chia distillery heirloom crucifix polaroid health goth. Viral activated charcoal street art seitan, tbh health goth quinoa four loko af live-edge unicorn. Before they sold out DIY 3 wolf moon fingerstache, dreamcatcher wayfarers photo booth adaptogen asymmetrical knausgaard hell of. Craft beer occupy keytar, skateboard sartorial master cleanse portland tote bag cred fingerstache artisan copper mug farm-to-table man bun small batch. XOXO mumblecore you probably haven't heard of them neutra knausgaard shoreditch cornhole 3 wolf moon salvia flannel single-origin coffee VHS bushwick.</p>
+                  <p>
+                    <strong>National Trust</strong>
+                    <ul>
+                      <li>Property lead for image-related GDPR: creating and administering digital and physical system, supervising photographers and training local staff</li>
+                    </ul>
+                  </p>
+                  <p>
+                    <strong>South Kesteven District Council</strong>
+                    <ul>
+                      <li>GDPR-lead for arts centres: researching regulations, wrote new privacy notices, created GDPR preference system in box office and website systems and trained staff (including managers)
+                      </li>
+                      
+                    </ul>
+                  </p>
                 </div>
                 <button class="accordion">Procuring, configuring and managing e-commerce relationships</button>
                 <div class="panel">
-                    <p>Kitsch PBR&B fixie yuccie, pour-over seitan snackwave etsy copper mug. Hella helvetica pabst disrupt butcher succulents tote bag salvia chia distillery heirloom crucifix polaroid health goth. Viral activated charcoal street art seitan, tbh health goth quinoa four loko af live-edge unicorn. Before they sold out DIY 3 wolf moon fingerstache, dreamcatcher wayfarers photo booth adaptogen asymmetrical knausgaard hell of. Craft beer occupy keytar, skateboard sartorial master cleanse portland tote bag cred fingerstache artisan copper mug farm-to-table man bun small batch. XOXO mumblecore you probably haven't heard of them neutra knausgaard shoreditch cornhole 3 wolf moon salvia flannel single-origin coffee VHS bushwick.</p>
+                    <p>
+                      <strong>South Kesteven District Council</strong>
+                      <ul>
+                        <li>
+                          Sourced and coordinated the purchase and installation of new Spektrix box office system (including two new websites) across multiple venues, including data migration and working with first, second and third-line council IT staff and managers: on-time and on-budget.
+                        </li>
+                    </p>
+                </div>
+                <button class="accordion">Websites</button>
+                <div class="panel">
+                  <p>
+                    <ul>
+                      <li>Currently developing a new <a href="/projects">rental experience service</a> with a small team of other NodeJS developers</li>
+                    </ul>
+                  </p>
+                  <p>
+                    <strong>South Kesteven District Council</strong>
+                    <ul>
+                      <li>
+                        Managed the development of websites for two venues and two festivals integrated with new box office system - transformed the way customers buy tickets, how staff
+                        sell and provide customer service and how the Council provided their cultural services.
+                      </li>
+                      </ul>
+                  </p>
+                    <p>
+                      <strong>Bodelwyddan Castle Trust</strong>
+                      <ul>
+                        <li>
+                          Created new WordPress-based website with embedding ticketing.
+                        </li>
+                        </ul>
+                    </p>
                 </div>
           
         </div>
