--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -52,7 +52,6 @@ nav {
     margin-top: 0px;
 }
 
-
 .card, .list-group {
     border: none;
     -webkit-box-shadow: 0px 54px 34px -38px rgba(0,0,0,0.3);
@@ -83,11 +82,26 @@ nav {
 .socials a {
     color: white;
 }
+.blogButtons {
+    margin-top: 10px;
+}
+#blogPosts {
+    background-color: rgba(100, 100, 100, 0.5);
+    padding: 0px 15px 15px 15px;
+}
+#blogRow {
+    margin-top: 25px;
+    padding-top: 10px;
+    
+}
 #cvButton {
     margin-top: 55px;
 }
 #linkedin{
     margin-left: 15px;
+}
+#newPostRow { 
+    margin-top: 70px;
 }
 #twitterIcon {
     margin-left: 15px;
@@ -101,10 +115,18 @@ nav {
 -moz-box-shadow: 1px -3px 31px 7px rgba(0,0,0,0.5);
 box-shadow: 1px -3px 31px 7px rgba(0,0,0,0.5);
 }
+#loginRow {
+    margin-top:50px;
+}
+#loginForm {
+    margin-top: 25px;
+}
 #radio {
     margin-left: 15px;
 }
-
+#registerForm {
+    margin-top: 50px;
+}
 /** ROWS **/
 #aboutMeRow {
     margin-top: 15px;
@@ -186,6 +208,9 @@ nav .navbar-nav li a  {
     }
 }
 @media (min-width: 576px) { 
+    .blogButtons {
+        margin-top: 0px;
+    }
     #badges {
         margin-top: 5px;
     }
