--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -13,6 +13,9 @@
           <a class="nav-link" href="/resume#about"><span id="leftBracket"></span> About me <span id="rightBracket"></span><span class="sr-only"></span></a>
       </li>
       <li class="nav-item">
+        <a class="nav-link" href="/blog"><span id="leftBracket"></span> Blog <span id="rightBracket"></span><span class="sr-only"></span></a>
+    </li>
+      <li class="nav-item">
         <a class="nav-link" href="/projects"><span id="leftBracket"></span> Technologies & Projects <span id="rightBracket"></span><span class="sr-only"></span></a>
     </li>
       <li class="nav-item">
@@ -22,8 +25,9 @@
           <a class="nav-link" href="/resume#training"><span id="leftBracket"></span> Training & Qualifications <span id="rightBracket"></span><span class="sr-only"></span></a>
       </li>
       <li class="nav-item">
-          <a class="nav-link" href="#message"><span id="leftBracket"></span> Send me a message <span id="rightBracket"></span><span class="sr-only"></span></a>
+          <a class="nav-link" href="/resume/#message"><span id="leftBracket"></span> Send me a message <span id="rightBracket"></span><span class="sr-only"></span></a>
       </li>
   
   </div>
   </nav>
+  
