--- a/views/blog/post.ejs
+++ b/views/blog/post.ejs
@@ -3,12 +3,22 @@
 
 <%- include('../partials/nav') %>
 <div class="container">
+    
     <div class="row justify-content-center">
-        <div class="col-12 text-center">
+        <div class="col-12 col-md-6 text-center">
             <h3><%= post.title %></h3>
         </div>
+    </div>
+    <div class="row justify-content-center">
+        <div class="col-12 col-md-12">
+            <img src="/<%= post.featuredImage %>"value="/<%= post.featuredImage %>"class="postImage">
+        </div>
+    </div>
         <div class="row justify-content-center">
-            <%= post.post %>
+            <div class="col-12 col-md-6">
+                <%= post.post %>
+            </div>
+            
         </div>
     </div>
     
