--- a/views/blog/post.ejs
+++ b/views/blog/post.ejs
@@ -15,7 +15,7 @@
         </div>
     </div>
         <div class="row justify-content-center">
-            <div class="col-12 col-md-6">
+            <div class="col-12 col-md-6"id="postContent">
                 <%= post.post %>
             </div>
             
