tried markdown amended blog

--- a/views/blog/blog.ejs
+++ b/views/blog/blog.ejs
@@ -22,7 +22,7 @@
                     <div class="float-right">
                         <% let string = '';
                         string += post.updatedAt;
-                        let postUpdatedOn = string.substr(0, 15); %>
+                        let postUpdatedOn = string.substr(0, 15); %> 
                     <em><%= postUpdatedOn %></em></div>
             </div>
         </div>
@@ -30,8 +30,8 @@
             <div class="col-12">
                 <% let postString = '';
                 postString += post.post;
-                let postSnippet = postString.substr(0, 50); %>
-                <%= postSnippet %>
+                let postSnippet = postString.substr(0, 55); %> 
+                <%= postSnippet %>...
                 
             </div>
         </div>
