added A+ and Google certs

--- a/views/resume.ejs
+++ b/views/resume.ejs
@@ -228,8 +228,8 @@
             <div class="col-sm-12 col-md-6">
               <button class="accordion">Certifications</button>
                 <div class="panel">
-                  <p>Prince2<sup>&reg;</sup> Agile</sup> <span class="badge badge-warning badge-pill">Studying</span></p>
-                  <p>CompTIA A+ <span class="badge badge-warning badge-pill">Studying</span></p>
+                  <p>Google IT Support Professional Certification <span class="badge badge-warning badge-pill">2020</span></p>
+                  <p>CompTIA A+ <span class="badge badge-warning badge-pill">2020</span></p>
                     <p>Microsoft 365 Certified: Fundamentals <span class="badge badge-warning badge-pill">2020</span></p>
                     <p >ITIL<sup>&reg;</sup> 4 Foundation <span class="badge badge-warning badge-pill">2020</span></p>
                     <p >Train the Trainer <span class="badge badge-warning badge-pill">2017</span></p>
@@ -270,8 +270,12 @@
               <div class="card bg-light">
                 <div class="card-body text-center">
                   
-                  <p class="card-text"><div data-iframe-width="150" data-iframe-height="270" data-share-badge-id="4c75277b-9ca9-4ab5-8a57-948caffc1604" data-share-badge-host="https://www.youracclaim.com"></div><script type="text/javascript" async src="//cdn.youracclaim.com/assets/utilities/embed.js"></script>
-                  <div data-iframe-width="150" data-iframe-height="270" data-share-badge-id="19403038-f0f5-44b5-924b-b586028c89b6" data-share-badge-host="https://www.youracclaim.com"></div><script type="text/javascript" async src="//cdn.youracclaim.com/assets/utilities/embed.js"></script></p>
+                <p class="card-text">
+                    <div data-iframe-width="150" data-iframe-height="270" data-share-badge-id="a19b8e7e-90f1-412b-90aa-57451cc3b774" data-share-badge-host="https://www.youracclaim.com"></div><script type="text/javascript" async src="//cdn.youracclaim.com/assets/utilities/embed.js"></script>
+                    <div data-iframe-width="150" data-iframe-height="270" data-share-badge-id="70dc6798-4cec-4dce-ad0b-fce287f2f190" data-share-badge-host="https://www.youracclaim.com"></div><script type="text/javascript" async src="//cdn.youracclaim.com/assets/utilities/embed.js"></script>
+                    <div data-iframe-width="150" data-iframe-height="270" data-share-badge-id="19403038-f0f5-44b5-924b-b586028c89b6" data-share-badge-host="https://www.youracclaim.com"></div><script type="text/javascript" async src="//cdn.youracclaim.com/assets/utilities/embed.js"></script>
+                    <div data-iframe-width="150" data-iframe-height="270" data-share-badge-id="4c75277b-9ca9-4ab5-8a57-948caffc1604" data-share-badge-host="https://www.youracclaim.com"></div><script type="text/javascript" async src="//cdn.youracclaim.com/assets/utilities/embed.js"></script>
+                </p>
                 </div>
               </div>
             </div>
